# videoRecording

./: CMakeLists.txt  README.md
src/: .task2_2.cpp.swp  videoRecorder.cpp
